--- a/uts-mla-nba/pyproject.toml
+++ b/uts-mla-nba/pyproject.toml
@@ -14,6 +14,8 @@ jupyterlab = "3.6.3"
 scikit-learn = "1.2.2"
 matplotlib = "^3.7.2"
 seaborn = "^0.12.2"
+xgboost = "^1.7.6"
+imbalanced-learn = "^0.11.0"
 
 
 [build-system]
