--- a/uts-mla-nba/pyproject.toml
+++ b/uts-mla-nba/pyproject.toml
@@ -16,6 +16,7 @@ matplotlib = "^3.7.2"
 seaborn = "^0.12.2"
 xgboost = "^1.7.6"
 imbalanced-learn = "^0.11.0"
+hyperopt = "^0.2.7"
 
 
 [build-system]
